--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- chat/templates/chat/room.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,16 +8,9 @@
     <textarea id="chat-log" cols="100" rows="20"></textarea><br>
     <input id="chat-message-input" type="text" size="100"><br>
     <input id="chat-message-submit" type="button" value="Send">
-
-    {{ seller|json_script:"room_name" }}
-    {{ customer|json_script:"room_name2" }}
-
+    {{ room_name|json_script:"room-name" }}
     <script>
-        const seller = JSON.parse(document.getElementById('room_name').textContent);
-        const customer = JSON.parse(document.getElementById('room_name2').textContent);
-        const roomName = customer + '_' + seller
-
-
+        const roomName = JSON.parse(document.getElementById('room-name').textContent);
 
         const chatSocket = new WebSocket(
             'ws://'
@@ -30,7 +22,7 @@
 
         chatSocket.onmessage = function(e) {
             const data = JSON.parse(e.data);
-            document.querySelector('#chat-log').value += (data.message + '\n' );
+            document.querySelector('#chat-log').value += (data.message + '\n');
         };
 
         chatSocket.onclose = function(e) {
@@ -48,9 +40,7 @@
             const messageInputDom = document.querySelector('#chat-message-input');
             const message = messageInputDom.value;
             chatSocket.send(JSON.stringify({
-                'message': message,
-                'customer_id': customer,
-                'seller_id': seller
+                'message': message
             }));
             messageInputDom.value = '';
         };
